--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
+    "@types/jsdom": "^27.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.1",
+    "jsdom": "^27.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
