--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cheerio": "^0.22.35",
     "axios": "^1.13.2",
     "axios-cookiejar-support": "^6.0.5",
     "bcryptjs": "^3.0.2",
@@ -23,6 +24,7 @@
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
     "node-cron": "^4.2.1",
+    "puppeteer": "^24.31.0",
     "tough-cookie": "^6.0.0"
   },
   "devDependencies": {
