--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -24,5 +24,5 @@ jobs:
             cd /opt/apps/better-edibles/production/backend &&
             git pull origin main &&
             docker compose -f /opt/apps/better-edibles/docker-compose.production.yml \
-              up -d --build production-backend
+              up -d --build backend
           "
