--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "axios-cookiejar-support": "^6.0.5",
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "puppeteer": "^24.31.0",
     "tough-cookie": "^6.0.0"
@@ -33,6 +35,7 @@
     "@types/jsdom": "^27.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "jsdom": "^27.2.0",
     "ts-node-dev": "^2.0.0",
