--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "puppeteer": "^24.31.0",
+    "resend": "^6.7.0",
     "tough-cookie": "^6.0.0"
   },
   "devDependencies": {
