--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "node-cron": "^4.2.1",
     "puppeteer": "^24.31.0",
     "resend": "^6.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tough-cookie": "^6.0.0"
   },
   "devDependencies": {
@@ -38,6 +40,8 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jsdom": "^27.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
